--- a/style.css
+++ b/style.css
@@ -4,53 +4,143 @@
     padding: 0;
 }
 
-header, main {
+body {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background: hsla(255, 52%, 52%, 1);
+
+    background: linear-gradient(90deg, hsla(255, 52%, 52%, 1) 0%, hsla(256, 57%, 26%, 1) 100%);
+
+    background: -moz-linear-gradient(90deg, hsla(255, 52%, 52%, 1) 0%, hsla(256, 57%, 26%, 1) 100%);
+
+    background: -webkit-linear-gradient(90deg, hsla(255, 52%, 52%, 1) 0%, hsla(256, 57%, 26%, 1) 100%);
+
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr="#6646C5", endColorstr="#301C67", GradientType=1);
+}
+
+header,
+main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #f0f0f0;
+    color: #fff;
 }
 
 .title {
-    margin-top: 1.25rem;
+    font-size:5rem;
+    white-space: nowrap;
+    overflow: hidden;
+    color: #F7CA05;
+    text-shadow: 0 5px 5px rgba(0,0,0,0.4),0 -3px 1px #fff;
+    letter-spacing: -3px;
+    padding-bottom: .5rem;
 }
 
 .board {
     display: grid;
     grid-template-rows: repeat(3, 100px);
-    grid-gap: .25rem;
+    grid-gap: .5rem;
     margin: 1.25rem 0;
+    padding: .75rem;
+    border-radius: .5rem;
+    background-color: #6646c5;
 
     .row {
         display: flex;
+        gap: .5rem;
     }
+
+    .cellO {
+        color: #ffd130;
+    }
+
+    .cellX {
+        color: #ec104f;
+    }
+
     .cell {
         width: 100px;
         height: 100px;
         display: flex;
         align-items: center;
         justify-content: center;
-        background-color: #fff;
-        border: 1px solid #ccc;
-        font-size: 1.25rem;
+        font-size: 5rem;
+        font-weight: 900;
         cursor: pointer;
-    }
-    .cell:hover {
-        background-color: #e0e0e0;
+        border-radius: .5rem;
+        background-color: #301c67;
     }
 }
 
 .controls {
     margin-top: .75rem;
+    display: flex;
+    gap: .5rem;
 
-    button {
-        margin: .25rem;
-        padding: .75rem 1.25rem;
-        font-size: 1rem;
+    /* CSS */
+    .button {
+        appearance: button;
+        background-color: #1899D6;
+        border: solid transparent;
+        border-radius: 16px;
+        border-width: 0 0 4px;
+        box-sizing: border-box;
+        color: #FFFFFF;
         cursor: pointer;
+        font-family: din-round, sans-serif;
+        font-size: 15px;
+        font-weight: 700;
+        letter-spacing: .8px;
+        line-height: 20px;
+        margin: 0;
+        outline: none;
+        overflow: visible;
+        padding: 13px 16px;
+        text-align: center;
+        text-transform: uppercase;
+        touch-action: manipulation;
+        transform: translateZ(0);
+        transition: filter .2s;
+        user-select: none;
+        -webkit-user-select: none;
+        vertical-align: middle;
+        white-space: nowrap;
+        width: 100%;
     }
-    button:disabled {
-        background-color: #ccc;
-        cursor: not-allowed;
+
+    .button:after {
+        background-clip: padding-box;
+        background-color: #1CB0F6;
+        border: solid transparent;
+        border-radius: 16px;
+        border-width: 0 0 4px;
+        bottom: -4px;
+        content: "";
+        left: 0;
+        position: absolute;
+        right: 0;
+        top: 0;
+        z-index: -1;
+    }
+
+    .button,
+    .button:focus {
+        user-select: auto;
+    }
+
+    .button:hover:not(:disabled) {
+        filter: brightness(1.1);
+        -webkit-filter: brightness(1.1);
+    }
+
+    .button:disabled {
+        cursor: auto;
+    }
+
+    .button:active {
+        border-width: 4px 0 0;
+        background: none;
     }
 }
